<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="52dp"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingTop="15dp"
        android:paddingRight="10dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/title_city"
            android:textColor="@android:color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/name_city"
            android:textColor="@android:color/black"
            android:textSize="14dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:paddingTop="15dp"
            android:text="@string/title_communication"
            android:textColor="@android:color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/call_to_chat"
            android:textColor="@android:color/black"
            android:textSize="14dp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/help_offer"
            android:textColor="@android:color/black"
            android:textSize="14dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/delivery_service_number"
            android:textColor="@android:color/black"
            android:textSize="14dp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/call_to_call"
            android:textColor="@android:color/black"
            android:textSize="14dp" />


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:paddingTop="15dp"
            android:text="Дополнительная информация"
            android:textColor="@android:color/black"
            android:textSize="20dp"
            android:textStyle="bold" />


        <RelativeLayout
            android:id="@+id/layout_orders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="Ваша история заказов"
                android:textColor="@android:color/black"
                android:textSize="14dp" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@null"
                android:paddingTop="5dp"
                android:src="@drawable/ic_arrow_16"
                android:text="@string/order_history" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:background="@color/gray"
            android:padding="5dp" />

        <RelativeLayout
            android:id="@+id/layout_delivery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title_delivery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/title_delivery"
                android:textColor="@android:color/black"
                android:textSize="14dp" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_delivery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@null"
                android:paddingTop="5dp"
                android:src="@drawable/ic_arrow_16"
                android:text="@string/order_history" />

        </RelativeLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>